<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginActivity">
    <ProgressBar
        android:id="@+id/load_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>
    <LinearLayout
        android:id="@+id/layout_login_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="20dp">
        <ImageView
            android:id="@+id/iv_photo"
            android:transitionName="profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_account_circle" />
        <EditText
            android:id="@+id/ed_login_email"
            android:transitionName="email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
        <TextView
            android:id="@+id/tv_email_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email"
            android:textColor="#FF0000"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <com.submission.appstory.customView.EditPassword
            android:id="@+id/ed_login_password"
            android:transitionName="password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="60dp"
            android:hint="@string/password"/>
        <TextView
            android:id="@+id/tv_password_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/password"
            android:textColor="#FF0000"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        <Button
            android:id="@+id/btn_create_account"
            android:transitionName="regbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
