<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="20dp"
    tools:context=".ui.RegisterActivity">

    <ProgressBar
        android:id="@+id/load_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_register_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photo"
                android:transitionName="profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_account_circle" />

            <EditText
                android:id="@+id/ed_register_name"
                android:transitionName="name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_name_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#FF0000"
                android:visibility="visible" />

            <EditText
                android:id="@+id/ed_register_email"
                android:transitionName="email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_email_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#FF0000"
                android:visibility="visible" />

            <com.submission.appstory.customView.EditPassword
                android:id="@+id/ed_register_password"
                android:transitionName="password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_password_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#FF0000"
                android:visibility="visible" />

            <com.submission.appstory.customView.EditPassword
                android:id="@+id/ed_register_password_confirmation"
                android:transitionName="password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_password2_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#FF0000"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_register"
                android:transitionName="regbutton"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>